--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freik/sync",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A set of synchronziation tools for dealing with promises and contention",
   "author": "Kevin Frei (kevinfrei@hotmail.com)",
   "license": "Unlicense",
@@ -45,13 +45,12 @@
   },
   "devDependencies": {
     "@freik/build-tools": "^3.6.0",
-    "@freik/core-utils": "^1.4.5",
     "@jest/types": "^29.5.0",
     "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
@@ -61,7 +60,7 @@
     "ts-jest": "^29.1.0",
     "typedoc": "^0.24.8",
     "typedoc-plugin-markdown": "^3.15.3",
-    "typescript": "^5.0.2"
+    "typescript": "5.0.4"
   },
   "files": ["lib/**/*"],
   "engines": {
@@ -69,7 +68,7 @@
   },
   "packageManager": "yarn@3.6.0",
   "dependencies": {
-    "@freik/containers": "^0.2.0",
+    "@freik/containers": "^0.2.1",
     "@freik/seqnum": "^1.1.0",
     "@freik/typechk": "^0.2.0"
   }
